tui/tests/snapshots/snapshot_tests__wide_terminal.snap
---
source: tests/snapshot_tests.rs
expression: "render_to_string(&mut app, 120, 24)"
---
TestBackend { buffer: Buffer {
    area: Rect { x: 0, y: 0, width: 120, height: 24 },
    content: [
        " Flutter  │  Agent  │  Interactions  │  Tree                                        test_app │ @app-one │ pid 12345     ",
        "┌ Flutter [1/0] ───────────────────────────────────────────────────────────────────────────────────────────────────────┐",
        "│                                                                                                                      │",
        "│                                                                                                                      │",
        "│                                                                                                                      │",
        "│                                                                                                                      │",
        "│                                                                                                                      │",
        "│                                                                                                                      │",
        "│                                                                                                                      │",
        "│                                                                                                                      │",
        "│                                                                                                                      │",
        "│                                                                                                                      │",
        "│                                                                                                                      │",
        "│                                                                                                                      │",
        "│                                                                                                                      │",
        "│                                                                                                                      │",
        "│                                                                                                                      │",
        "│                                                                                                                      │",
        "│                                                                                                                      │",
        "│                                                                                                                      │",
        "│                                                                                                                      │",
        "│                                                                                                                      │",
        "└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘",
        "hl:tabs ↑↓/jk:scroll /:filter s:sessions r:reload R:restart x:stop c:clear ?:help                                       ",
    ],
    styles: [
        x: 0, y: 0, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 0, fg: Cyan, bg: Reset, underline: Reset, modifier: BOLD,
        x: 8, y: 0, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 84, y: 0, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 92, y: 0, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 95, y: 0, fg: Magenta, bg: Reset, underline: Reset, modifier: NONE,
        x: 103, y: 0, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 106, y: 0, fg: Green, bg: Reset, underline: Reset, modifier: NONE,
        x: 115, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 119, y: 2, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 119, y: 3, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 119, y: 4, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 119, y: 5, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 119, y: 6, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 119, y: 7, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 119, y: 8, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 119, y: 9, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 119, y: 10, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 119, y: 11, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 119, y: 12, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 119, y: 13, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 119, y: 14, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 119, y: 15, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 119, y: 16, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 119, y: 17, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 119, y: 18, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 119, y: 19, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 20, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 119, y: 20, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 21, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 119, y: 21, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 23, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 2, y: 23, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 7, y: 23, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 23, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 13, y: 23, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 20, y: 23, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 21, y: 23, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 22, y: 23, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 29, y: 23, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 30, y: 23, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 31, y: 23, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 40, y: 23, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 41, y: 23, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 42, y: 23, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 49, y: 23, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 50, y: 23, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 51, y: 23, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 23, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 60, y: 23, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 61, y: 23, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 66, y: 23, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 67, y: 23, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 68, y: 23, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 74, y: 23, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 75, y: 23, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 76, y: 23, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 81, y: 23, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}, scrollback: Buffer {
    area: Rect { x: 0, y: 0, width: 120, height: 0 }
}, cursor: false, pos: (0, 0) }
